<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.osm2world</groupId>
	<artifactId>osm2world</artifactId>
	<version>0.4.0-SNAPSHOT</version>

	<name>OSM2World</name>
	<description>OSM2World creates three-dimensional models of the world from OpenStreetMap data</description>
	<url>https://osm2world.org</url>
	<inceptionYear>2010</inceptionYear>

	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE, Version 2.1, February 1999</name>
			<url>https://www.gnu.org/licenses/lgpl-2.1.html</url>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/tordanik/osm2world/issues</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>topobyte-repo</id>
			<url>https://mvn.topobyte.de</url>
		</repository>
		<repository>
			<id>slimjars-repo</id>
			<url>https://mvn.slimjars.com</url>
		</repository>
		<repository>
			<id>jzy3d-snapshots</id>
			<name>Jzy3d Snapshots</name>
			<url>https://maven.jzy3d.org/snapshots/</url>
		</repository>
		<repository>
			<id>jzy3d-releases</id>
			<name>Jzy3d Releases</name>
			<url>https://maven.jzy3d.org/releases/</url>
		</repository>
	</repositories>

	<dependencies>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.10</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>

		<dependency>
			<groupId>com.lexicalscope.jewelcli</groupId>
			<artifactId>jewelcli</artifactId>
			<version>0.8.9</version>
		</dependency>

		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<version>1.19.0</version>
		</dependency>

		<dependency>
			<groupId>de.topobyte</groupId>
			<artifactId>osm4j-core</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>de.topobyte</groupId>
			<artifactId>osm4j-pbf</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>de.topobyte</groupId>
			<artifactId>osm4j-xml</artifactId>
			<version>1.3.0</version>
		</dependency>

		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>3.25.5</version>
		</dependency>

		<dependency>
			<groupId>com.jhlabs</groupId>
			<artifactId>javaproj</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.2.1-jre</version>
		</dependency>

		<dependency>
			<groupId>net.sf.trove4j</groupId>
			<artifactId>trove4j</artifactId>
			<version>3.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.orbisgis</groupId>
			<artifactId>poly2tri-core</artifactId>
			<version>0.1.2</version>
		</dependency>

		<dependency>
			<groupId>ar.com.hjg</groupId>
			<artifactId>pngj</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>io.github.earcut4j</groupId>
			<artifactId>earcut4j</artifactId>
			<version>2.2.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-transcoder</artifactId>
			<version>1.17</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-rasterizer</artifactId>
			<version>1.17</version>
		</dependency>

		<dependency>
			<groupId>org.imintel</groupId>
			<artifactId>mbtiles4j</artifactId>
			<version>1.0.6</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>com.geodesk</groupId>
			<artifactId>geodesk</artifactId>
			<version>0.1.9</version>
		</dependency>

		<!-- JOGL -->

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-natives-linux-aarch64</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-natives-linux-amd64</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-natives-linux-armv6hf</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-natives-linux-i586</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-natives-macosx-universal</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-natives-windows-amd64</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-natives-windows-i586 </artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<!-- GLUEGEN -->

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-natives-linux-aarch64</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-natives-linux-amd64</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-natives-linux-armv6hf</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-natives-linux-i586</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-natives-macosx-universal</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-natives-windows-amd64</artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-natives-windows-i586 </artifactId>
			<version>v2.4.0-rc-20210111</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>org.osm2world.console.OSM2World</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>  <!-- Create sources.jar -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>  <!-- Create javadoc.jar -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<doclint>all,-missing</doclint>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
